<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Github User App</string>
    <string name="username">username</string>
    <string name="name_list">name</string>
    <string name="location_list">location_list</string>
    <string name="username_detail">username detail</string>
    <string name="user_detail">user detail</string>
    <string name="description_user">Description User:</string>
    <string name="search">Search</string>
    <string name="search_hint">Search User</string>
    <string name="name">Name</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="nav_followers">Followers:</string>
    <string name="nav_following">Following:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_followers">Followers</string>
    <string name="tab_following">Following</string>
    <string name="change_language_settings" tools:ignore="MissingTranslation">Change Language Settings</string>

    <string name="location" tools:ignore="MissingTranslation">Location</string>
    <string name="company" tools:ignore="MissingTranslation">Company</string>
    <string name="repository" tools:ignore="MissingTranslation">Repository</string>
    <string name="favorite">Favorite List</string>
    <string name="setting" tools:ignore="MissingTranslation">Setting</string>
    <string name="title_reminder" tools:ignore="MissingTranslation">Daily Reminder</string>
    <string name="key_reminder" tools:ignore="MissingTranslation">sp_reminder</string>
    <string name="key_change_language" tools:ignore="MissingTranslation">change_language</string>
    <string name="reminder_message" tools:ignore="MissingTranslation">Let`s find favourite user on Github</string>
    <string name="reminder_toast_on" tools:ignore="MissingTranslation">Daily Reminder On</string>
    <string name="reminder_toast_off" tools:ignore="MissingTranslation">Daily Reminder Off</string>
    <string name="add_user" tools:ignore="MissingTranslation">Add user</string>
    <string name="to_favorite" tools:ignore="MissingTranslation">To Favorite List</string>
    <string name="remove_user" tools:ignore="MissingTranslation">Removed user</string>
    <string name="from_favorite" tools:ignore="MissingTranslation">From Favorite list</string>
</resources>