<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/favorite_menu"
        android:title="@string/favorite"
        android:icon="@drawable/ic_baseline_favorite_red_24"
        app:showAsAction="always"/>
    <item
        android:id="@+id/setting_menu"
        android:title="@string/setting"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="always|withText"/>
</menu>